Finished; fixed spacing and header; review organization

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,6 +5,8 @@ body {
 	background-color: black;
 	opacity: 0.9;
 	text-align: center;
+	margin: 0;
+	padding: 0;
 }
 
 header {
@@ -70,6 +72,7 @@ a {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	padding-bottom: 70px;
 }
 
 .tea {
